--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -243,6 +243,10 @@
     "message": "‮ɟɐsʇǝsʇ‬ ‮Ↄonuʇɹʎ‬",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
   },
+  "settings#egress-region#select-ca": {
+    "message": "‮Ↄɐuɐpɐ‬",
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Canada will be used."
+  },
   "settings#egress-region#select-de": {
     "message": "‮פǝɹɯɐuʎ‬",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
@@ -250,6 +254,10 @@
   "settings#egress-region#select-gb": {
     "message": "‮∩uıʇǝp‬ ‮Ӽıuƃpoɯ‬",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the UK will be used."
+  },
+  "settings#egress-region#select-in": {
+    "message": "‮Iupıɐ‬",
+    "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in India will be used."
   },
   "settings#egress-region#select-jp": {
     "message": "‮ſɐdɐu‬",
